add model auto
