# auto-models/route_setting.js
@@ -1,33 +1,15 @@
 const Sequelize = require('sequelize');
 module.exports = function(sequelize, DataTypes) {
-  return sequelize.define('bus', {
+  return sequelize.define('route_setting', {
     id: {
       autoIncrement: true,
       type: DataTypes.BIGINT,
       allowNull: false,
       primaryKey: true
     },
-    number: {
-      type: DataTypes.STRING(255),
+    work_standard: {
+      type: DataTypes.INTEGER,
       allowNull: true
-    },
-    status: {
-      type: DataTypes.STRING(255),
-      allowNull: true,
-      defaultValue: "NORMAL"
-    },
-    bus_type: {
-      type: DataTypes.STRING(255),
-      allowNull: true,
-      defaultValue: "GENERAL"
-    },
-    company_id: {
-      type: DataTypes.BIGINT,
-      allowNull: true,
-      references: {
-        model: 'company',
-        key: 'id'
-      }
     },
     route_id: {
       type: DataTypes.BIGINT,
@@ -36,6 +18,38 @@ module.exports = function(sequelize, DataTypes) {
         model: 'route',
         key: 'id'
       }
+    },
+    date: {
+      type: DataTypes.DATEONLY,
+      allowNull: true
+    },
+    cnt_mon: {
+      type: DataTypes.INTEGER,
+      allowNull: true
+    },
+    cnt_tue: {
+      type: DataTypes.INTEGER,
+      allowNull: true
+    },
+    cnt_wed: {
+      type: DataTypes.INTEGER,
+      allowNull: true
+    },
+    cnt_thu: {
+      type: DataTypes.INTEGER,
+      allowNull: true
+    },
+    cnt_fri: {
+      type: DataTypes.INTEGER,
+      allowNull: true
+    },
+    cnt_sat: {
+      type: DataTypes.INTEGER,
+      allowNull: true
+    },
+    cnt_sun: {
+      type: DataTypes.INTEGER,
+      allowNull: true
     },
     manager_id: {
       type: DataTypes.BIGINT,
@@ -47,7 +61,7 @@ module.exports = function(sequelize, DataTypes) {
     }
   }, {
     sequelize,
-    tableName: 'bus',
+    tableName: 'route_setting',
     timestamps: true,
     indexes: [
       {
@@ -59,21 +73,14 @@ module.exports = function(sequelize, DataTypes) {
         ]
       },
       {
-        name: "FK_company_TO_bus_1",
-        using: "BTREE",
-        fields: [
-          { name: "company_id" },
-        ]
-      },
-      {
-        name: "FK_route_TO_bus_1",
+        name: "FK_route_TO_route_setting_1",
         using: "BTREE",
         fields: [
           { name: "route_id" },
         ]
       },
       {
-        name: "FK_user_TO_bus_1",
+        name: "FK_user_TO_route_setting_1",
         using: "BTREE",
         fields: [
           { name: "manager_id" },
